Nuxt.js에 대응하기 위해 계속 만져보고 있다 앞으로 이런 커밋이 계속 올라오지 않을까?

--- a/StatusPage/package.json
+++ b/StatusPage/package.json
@@ -22,7 +22,7 @@
   "author": "SkyLightQP",
   "license": "MIT",
   "dependencies": {
-    "body-parser": "^1.18.2",
+    np"body-parser": "^1.18.2",
     "express": "^4.16.2",
     "log4js": "^2.4.1",
     "moment": "^2.20.1",
